# s2aManager

./: .gitignore  README.md  config.example.yaml  pyproject.toml
s2a_manager_web/: __init__.py  __main__.py  errors.py  logic.py  main.py  scheduled_tasks.py  settings.py  sub2api.py
s2a_manager_web/static/: app.js  style.css
s2a_manager_web/templates/: base.html  dashboard.html  login.html
s2a_manager_web/templates/partials/: accounts_table.html  bulk_result.html  delete_result.html  error_panel.html  import_result.html  scheduled_tasks.html
